some changes in project

--- a/100Days_of_Python_Code/Biginner/Day4 - Randomization and Python Lists.ipynb
+++ b/100Days_of_Python_Code/Biginner/Day4 - Randomization and Python Lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23c5f64a",
+   "id": "313e2e79",
    "metadata": {},
    "source": [
     "# Day4 - Randomization and Python Lists"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95586de3",
+   "id": "960d8757",
    "metadata": {},
    "source": [
     "### # Randomisation"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1f65e228",
+   "id": "de270a20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ebbf82fe",
+   "id": "42ef5157",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "1c3be3b7",
+   "id": "87f21873",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6404ceeb",
+   "id": "cd3f12b9",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "10b7bcb6",
+   "id": "5a6356ff",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "04de3e0c",
+   "id": "1d436dc8",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e461921d",
+   "id": "7b8055c7",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "29c71931",
+   "id": "68169a89",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8dc43e99",
+   "id": "899af8c1",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "636d0972",
+   "id": "75d55082",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8e9f3591",
+   "id": "0389df13",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "053eb66e",
+   "id": "8c1f80dd",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81bff8d",
+   "id": "0bda2888",
    "metadata": {},
    "source": [
     "###### How to access another ipynb file from current file"
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b129280f",
+   "id": "e5691f7a",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b183756b",
+   "id": "f0f4e92a",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f7e1273f",
+   "id": "90c4813e",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f316579",
+   "id": "b7014d6d",
    "metadata": {},
    "source": [
     "### # Understanding the Offset and Appending Items to Lists"
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "43793085",
+   "id": "b17bf494",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e03a40c2",
+   "id": "fa0d355e",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "96558f2c",
+   "id": "c7a1ef82",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e04d2b63",
+   "id": "38ee58a9",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "85fe8080",
+   "id": "03e15149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "ee407eb7",
+   "id": "8196cd23",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb7a7362",
+   "id": "b97024ff",
    "metadata": {},
    "source": [
     "###### list.append(x) : \n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8123ccea",
+   "id": "ce6bddd6",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a21094b",
+   "id": "55206564",
    "metadata": {},
    "source": [
     "###### list.extend(iterable)  : \n",
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "9435690c",
+   "id": "928d5655",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "673c8b69",
+   "id": "20301f71",
    "metadata": {},
    "source": [
     "###### list.insert(i,x) :\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4eee4771",
+   "id": "b905bbc4",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "255e89fa",
+   "id": "df9ca814",
    "metadata": {},
    "source": [
     "###### list.remove(x) :\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "52094b47",
+   "id": "d23e06cf",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63852ee",
+   "id": "447e1a08",
    "metadata": {},
    "source": [
     "###### list.pop( i ) :\n",
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1dfcbbc2",
+   "id": "9fe6be2b",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "33bb8f7a",
+   "id": "e1f0efa2",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c974a45d",
+   "id": "b2b2990c",
    "metadata": {},
    "source": [
     "###### list.clear()\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "ba1eb7ab",
+   "id": "a90dcc21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e867ae",
+   "id": "b8dff63b",
    "metadata": {},
    "source": [
     "###### list.index(x[, start[, end]])\n",
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "5af572ac",
+   "id": "052ce841",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ab6c04b8",
+   "id": "9e4e8096",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "79a56fb0",
+   "id": "d670a2a6",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a37ba0fb",
+   "id": "d6b9597b",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b7de8b4",
+   "id": "25986c77",
    "metadata": {},
    "source": [
     "###### list.count(x)\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "9e79c754",
+   "id": "81afc4c3",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89cd697d",
+   "id": "822980a0",
    "metadata": {},
    "source": [
     "###### list.sort(*, key=None, reverse=False)\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "8aaf57b1",
+   "id": "726d9a16",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "28291849",
+   "id": "e17a893e",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "8a1fe5ce",
+   "id": "5d65d77b",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "764bfc63",
+   "id": "dd5f40c5",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff018aab",
+   "id": "3920854e",
    "metadata": {},
    "source": [
     "###### list.reverse()\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "0947b27e",
+   "id": "0696a0a3",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "c7861117",
+   "id": "1d243f86",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "498406b8",
+   "id": "62b8d456",
    "metadata": {},
    "source": [
     "#### Shallo copy and Deep Copy\n",
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "15124325",
+   "id": "b5592f93",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "3e783933",
+   "id": "29a4f215",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b78b2a8a",
+   "id": "a9d3b833",
    "metadata": {},
    "source": [
     "###### Code Challange : Who will pay the bill ?"
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "d25ad48b",
+   "id": "82fc0d13",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "39dd757c",
+   "id": "33785717",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa6b861b",
+   "id": "4f130a22",
    "metadata": {},
    "source": [
     "#### IndexErrors and Working with Nested Lists"
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "2f13a505",
+   "id": "903d405d",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "87861d13",
+   "id": "a39702e9",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "bef1f06a",
+   "id": "931af686",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "d1c34db0",
+   "id": "652cf5fc",
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "7d4df661",
+   "id": "e6d86a85",
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "9c231575",
+   "id": "9b394c62",
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "bebccbb5",
+   "id": "7b25c2f6",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "37ebfe57",
+   "id": "70570711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "c013e38c",
+   "id": "23f8dcc4",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "98bbde4c",
+   "id": "19813c1e",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "6b004b2d",
+   "id": "bf32de03",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ecaf675e",
+   "id": "2d063aa7",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)\n",
@@ -1256,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "1359a549",
+   "id": "d22cafe5",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571cb29c",
+   "id": "c9f48a0c",
    "metadata": {},
    "source": [
     "### Coding Exercise "
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "77b63daf",
+   "id": "079e6b55",
    "metadata": {},
    "source": [
     "You are going to write a virtual coin toss program. It will randomly tell the user \"Heads\" or \"Tails\".\n",
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "8b868e6c",
+   "id": "87962d32",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "f459a8aa",
+   "id": "96d98d6c",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5de1612f",
+   "id": "231e1404",
    "metadata": {},
    "source": [
     "You are going to write a program that will select a random name from a list of names. The person selected will have to pay for everybody's food bill.\n",
@@ -1351,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "8ce0ef92",
+   "id": "314405ee",
    "metadata": {},
    "outputs": [
     {
@@ -1377,14 +1377,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5120864a",
+   "id": "bf08f488",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "35509630",
+   "id": "2a1b528f",
    "metadata": {},
    "source": [
     "You are going to write a program that will mark a spot on a map with an X.\n",
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "621cea85",
+   "id": "517fcec4",
    "metadata": {
     "scrolled": true
    },
@@ -1447,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "16d3775a",
+   "id": "ba53a63f",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e97aff2",
+   "id": "3cbf6b07",
    "metadata": {},
    "source": [
     "#### Day 4 Project: Rock Paper Scissors \n",
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "a1e88c7a",
+   "id": "194db279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "60cc3135",
+   "id": "ddc4971f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "6d81a1c3",
+   "id": "5e77e532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "507dbab7",
+   "id": "e877f801",
    "metadata": {},
    "outputs": [
     {
@@ -1574,23 +1574,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "id": "9290e3d4",
+   "execution_count": 204,
+   "id": "96bde833",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What do you choose? Type 0 for Rock, Type 1 for Papper or 2 for scissors2\n",
-      "Computer choose 2\n",
+      "What do you choose? Type 0 for Rock, Type 1 for Papper or 2 for scissors1\n",
       "\n",
       "    _______\n",
       "---'   ____)____\n",
       "          ______)\n",
-      "       __________)\n",
-      "      (____)\n",
-      "---.__(___)\n",
+      "          _______)\n",
+      "         _______)\n",
+      "---.__________)\n",
+      "\n",
+      "\n",
+      "Computer choose 1\n",
+      "\n",
+      "    _______\n",
+      "---'   ____)____\n",
+      "          ______)\n",
+      "          _______)\n",
+      "         _______)\n",
+      "---.__________)\n",
       "\n",
       "\n",
       "It's a draw!\n"
@@ -1601,7 +1610,7 @@
     "game_images = [rock, paper, scissors]\n",
     "\n",
     "user_choice = int(input(\"What do you choose? Type 0 for Rock, Type 1 for Papper or 2 for scissors\"))\n",
-    "# 0, 1, 2\n",
+    "print(game_images[user_choice]) # 0, 1, 2\n",
     "\n",
     "computer_choice = random.randint(a=0,b=2)\n",
     "print(f\"Computer choose {computer_choice}\")\n",
@@ -1624,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75e2bf11",
+   "id": "aa4778b3",
    "metadata": {},
    "outputs": [],
    "source": []
