--- a/100Days_of_Python_Code/Biginner/Day4 - Randomization and Python Lists.ipynb
+++ b/100Days_of_Python_Code/Biginner/Day4 - Randomization and Python Lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "313e2e79",
+   "id": "eccf080a",
    "metadata": {},
    "source": [
     "# Day4 - Randomization and Python Lists"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960d8757",
+   "id": "26d86758",
    "metadata": {},
    "source": [
     "### # Randomisation"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "de270a20",
+   "id": "017dac7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "42ef5157",
+   "id": "f7706829",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "87f21873",
+   "id": "3fe7b98c",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cd3f12b9",
+   "id": "673d62bf",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5a6356ff",
+   "id": "7a8aaa46",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1d436dc8",
+   "id": "f24e50fb",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7b8055c7",
+   "id": "4b9b7f72",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "68169a89",
+   "id": "d4e5aff2",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "899af8c1",
+   "id": "92aad04c",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "75d55082",
+   "id": "2ec636a0",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0389df13",
+   "id": "88ca7e91",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8c1f80dd",
+   "id": "087151af",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bda2888",
+   "id": "432ca749",
    "metadata": {},
    "source": [
     "###### How to access another ipynb file from current file"
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e5691f7a",
+   "id": "cd133db9",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f0f4e92a",
+   "id": "44f7a753",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "90c4813e",
+   "id": "72f5ee5c",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7014d6d",
+   "id": "3b882a80",
    "metadata": {},
    "source": [
     "### # Understanding the Offset and Appending Items to Lists"
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b17bf494",
+   "id": "c3304bef",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "fa0d355e",
+   "id": "fd8806d2",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c7a1ef82",
+   "id": "b796b799",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "38ee58a9",
+   "id": "78ce4fe6",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "03e15149",
+   "id": "cae9c0db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "8196cd23",
+   "id": "eec9c91f",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b97024ff",
+   "id": "4e29ec33",
    "metadata": {},
    "source": [
     "###### list.append(x) : \n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ce6bddd6",
+   "id": "117084d3",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55206564",
+   "id": "e967f65d",
    "metadata": {},
    "source": [
     "###### list.extend(iterable)  : \n",
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "928d5655",
+   "id": "d15b186c",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20301f71",
+   "id": "d3efd48c",
    "metadata": {},
    "source": [
     "###### list.insert(i,x) :\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "b905bbc4",
+   "id": "b6d8341d",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df9ca814",
+   "id": "6c4e4682",
    "metadata": {},
    "source": [
     "###### list.remove(x) :\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "d23e06cf",
+   "id": "6e3b95f0",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447e1a08",
+   "id": "170bd121",
    "metadata": {},
    "source": [
     "###### list.pop( i ) :\n",
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "9fe6be2b",
+   "id": "50dbbc19",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "e1f0efa2",
+   "id": "f60e129d",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b2990c",
+   "id": "f5659043",
    "metadata": {},
    "source": [
     "###### list.clear()\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "a90dcc21",
+   "id": "dc5fd748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8dff63b",
+   "id": "3da4b4a5",
    "metadata": {},
    "source": [
     "###### list.index(x[, start[, end]])\n",
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "052ce841",
+   "id": "be520482",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "9e4e8096",
+   "id": "58a0306f",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d670a2a6",
+   "id": "0b6e732e",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "d6b9597b",
+   "id": "11ca80ae",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25986c77",
+   "id": "e07d3cee",
    "metadata": {},
    "source": [
     "###### list.count(x)\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "81afc4c3",
+   "id": "cb717fe3",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "822980a0",
+   "id": "4dbb5139",
    "metadata": {},
    "source": [
     "###### list.sort(*, key=None, reverse=False)\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "726d9a16",
+   "id": "c082f7e5",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "e17a893e",
+   "id": "e5e69d5f",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "5d65d77b",
+   "id": "15bfc8ba",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "dd5f40c5",
+   "id": "8d1ecbe9",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3920854e",
+   "id": "95bcbd58",
    "metadata": {},
    "source": [
     "###### list.reverse()\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "0696a0a3",
+   "id": "6f2dcfc8",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1d243f86",
+   "id": "222efffd",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "62b8d456",
+   "id": "9639dd4b",
    "metadata": {},
    "source": [
     "#### Shallo copy and Deep Copy\n",
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "b5592f93",
+   "id": "f53437a1",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "29a4f215",
+   "id": "af3407fb",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9d3b833",
+   "id": "1d74cae0",
    "metadata": {},
    "source": [
     "###### Code Challange : Who will pay the bill ?"
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "82fc0d13",
+   "id": "925d18c6",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "33785717",
+   "id": "1051c8f8",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f130a22",
+   "id": "a34cecfe",
    "metadata": {},
    "source": [
     "#### IndexErrors and Working with Nested Lists"
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "903d405d",
+   "id": "f687665d",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "a39702e9",
+   "id": "5bed7cc3",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "931af686",
+   "id": "165cd8c3",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "652cf5fc",
+   "id": "1eba961e",
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "e6d86a85",
+   "id": "4df32f52",
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "9b394c62",
+   "id": "d9d6c70d",
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7b25c2f6",
+   "id": "b569dcc6",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "70570711",
+   "id": "ca7acfff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "23f8dcc4",
+   "id": "1d3ea6e8",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "19813c1e",
+   "id": "91f3e38a",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "bf32de03",
+   "id": "98a3b33a",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "2d063aa7",
+   "id": "1ae2445e",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)\n",
@@ -1256,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "d22cafe5",
+   "id": "67a54995",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9f48a0c",
+   "id": "97a605a6",
    "metadata": {},
    "source": [
     "### Coding Exercise "
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "079e6b55",
+   "id": "e4d0687f",
    "metadata": {},
    "source": [
     "You are going to write a virtual coin toss program. It will randomly tell the user \"Heads\" or \"Tails\".\n",
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "87962d32",
+   "id": "c8751653",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "96d98d6c",
+   "id": "132e0599",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "231e1404",
+   "id": "503c09bc",
    "metadata": {},
    "source": [
     "You are going to write a program that will select a random name from a list of names. The person selected will have to pay for everybody's food bill.\n",
@@ -1351,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "314405ee",
+   "id": "152c615d",
    "metadata": {},
    "outputs": [
     {
@@ -1377,14 +1377,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf08f488",
+   "id": "64d73fe0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "2a1b528f",
+   "id": "948f251c",
    "metadata": {},
    "source": [
     "You are going to write a program that will mark a spot on a map with an X.\n",
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "517fcec4",
+   "id": "ec3b9e3c",
    "metadata": {
     "scrolled": true
    },
@@ -1447,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "ba53a63f",
+   "id": "3a286582",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cbf6b07",
+   "id": "8e4204a4",
    "metadata": {},
    "source": [
     "#### Day 4 Project: Rock Paper Scissors \n",
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "194db279",
+   "id": "ee98661c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "ddc4971f",
+   "id": "2dd88349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "5e77e532",
+   "id": "081b9271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "e877f801",
+   "id": "c492af51",
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "96bde833",
+   "id": "1be0ce25",
    "metadata": {},
    "outputs": [
     {
@@ -1631,9 +1631,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6dd9e0e4",
+   "metadata": {},
+   "source": [
+    "# Programming is like going to the Gym"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa4778b3",
+   "id": "08e46ac8",
    "metadata": {},
    "outputs": [],
    "source": []
