Day 8 is in progress

--- a/100Days_of_Python_Code/Biginner/Day7 - Hangman.ipynb
+++ b/100Days_of_Python_Code/Biginner/Day7 - Hangman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bf085b05",
+   "id": "c89e1485",
    "metadata": {},
    "source": [
     "# Day7 - Hangman"
@@ -15,7 +15,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4ff71cf8",
+   "id": "c00cdba6",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c9a16844",
+   "id": "cd21b58f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f51f4ce",
+   "id": "c20d41d3",
    "metadata": {},
    "source": [
     "https://en.wikipedia.org/wiki/Hangman_(game)"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "51e99460",
+   "id": "ae6e7852",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dff37c1",
+   "id": "0361cff0",
    "metadata": {},
    "source": [
     "https://hangmanwordgame.com/?fca=1&success=0#/round-results"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bf9d9810",
+   "id": "90a623ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e18fc6fb",
+   "id": "b474ab32",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e334d0c3",
+   "id": "ed8ab1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8543b84d",
+   "id": "11f6a8e7",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "19582bb1",
+   "id": "ba4de625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2433e1b0",
+   "id": "8b994d4a",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d06d2c90",
+   "id": "088d23d7",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "32645222",
+   "id": "51fbc060",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "355a238b",
+   "id": "146eeab5",
    "metadata": {},
    "source": [
     "### Step 1 - Picking a Random Words and Checking Answers"
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fcc95b46",
+   "id": "33f93399",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c954706",
+   "id": "c1613f88",
    "metadata": {},
    "source": [
     "### Step 2 - Replacing Blanks with Guesses"
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7468f239",
+   "id": "79676d12",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "787c09a0",
+   "id": "71eeb605",
    "metadata": {},
    "source": [
     "### Step 3 - Checking if the Player has Won"
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b8737912",
+   "id": "4c3597a8",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cadc8b94",
+   "id": "d9e5e012",
    "metadata": {},
    "source": [
     "### Step 4 - Keeping Track of the Player's Lives"
@@ -905,7 +905,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "95df1fdb",
+   "id": "d40b3f72",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3cde3e9e",
+   "id": "40ad4036",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7de85f8d",
+   "id": "5c122b53",
    "metadata": {},
    "source": [
     "### Step 5 - Improving the User Experience"
@@ -1102,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7ea7be8d",
+   "id": "df18d819",
    "metadata": {},
    "outputs": [
     {
@@ -1357,11 +1357,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab1a54f7",
+   "id": "066fcbe8",
    "metadata": {},
    "source": [
-    "# If it takes you longer than one day to complete one of the days, dot't warry you're putting in that daily repetition, that your doing it continuously and you're not spending a long break in between each lesson because this way the content can feel fresh in your mind when you come to it. So don't worry if each day takes you two or three days to do, just"
+    "# If it takes you longer than one day to complete one of the days, don't warry you're putting in that daily repetition, that your doing it continuously and you're not spending a long break in between each lesson because this way the content can feel fresh in your mind when you come to it. So don't worry if each day takes you two or three days to do, just keep going."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6247225",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
