--- a/100Days_of_Python_Code/Biginner/Day8 - Function Parameters and Caesar Cipher.ipynb
+++ b/100Days_of_Python_Code/Biginner/Day8 - Function Parameters and Caesar Cipher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a9086ddc",
+   "id": "6c5867c3",
    "metadata": {},
    "source": [
     "# Day8 - Function Parameters and Caesar Cipher"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f708681",
+   "id": "6647cb61",
    "metadata": {},
    "source": [
     "### 1. Functions with Inputs"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0178c3c1",
+   "id": "a36f2fe1",
    "metadata": {},
    "source": [
     "    def my_function(something):\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d923446d",
+   "id": "7d66fbf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "82002487",
+   "id": "def56fdf",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ab051c12",
+   "id": "81eeec04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "97cc192a",
+   "id": "ec059859",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9ebb1bab",
+   "id": "f21f62a6",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343c7b2b",
+   "id": "135661e3",
    "metadata": {},
    "source": [
     "###### coding excersize - life in week"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a3bf1f",
+   "id": "1603f783",
    "metadata": {},
    "source": [
     "Create a function called life_in_weeks() using maths and f-Strings that tells us how many weeks we have left, if we live until 90 years old.\n",
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "75c9a390",
+   "id": "d862aed9",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c297c29b",
+   "id": "fd7acd4a",
    "metadata": {},
    "source": [
     "### 2. Positional vs. Keyword Arguments"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f385b2b4",
+   "id": "ac01fe48",
    "metadata": {},
    "source": [
     "###### Positional Arguments\n",
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c804dc73",
+   "id": "8ca7efd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0a2cf4bb",
+   "id": "4c3f54ef",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "87e5317c",
+   "id": "572e9eec",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af70da53",
+   "id": "9d73dc76",
    "metadata": {},
    "source": [
     "###### Keyword Arguments\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d0d15d7d",
+   "id": "32584ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "943afe73",
+   "id": "cb08fb71",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b918185",
+   "id": "ec82638c",
    "metadata": {},
    "source": [
     "###### Coding excersize - Love Calculator"
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bb3a91e",
+   "id": "ddb9cac4",
    "metadata": {},
    "source": [
     "You are going to write a function called calculate_love_score() that tests the compatibility between two names.  To work out the love score between two people: \n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2e5c9fe5",
+   "id": "71f420b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e1f88502",
+   "id": "28f9e6ff",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c89cb1c9",
+   "id": "7cdd6297",
    "metadata": {},
    "source": [
     "### Day8 - Project - Caesar Cipher "
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b4acd6d",
+   "id": "a47f951c",
    "metadata": {},
    "source": [
     "#### Caesar Cipher Part 1 - Encryption"
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "cc2d4a9d",
+   "id": "9af3a9de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,30 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "5d78f2d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fruits = [\"Apple\",\"Peer\",\"Orange\"]\n",
-    "fruits.index(\"Peer\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 85,
-   "id": "1a73dfd5",
+   "id": "e0bba25d",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "4791ee3a",
+   "id": "87caae5a",
    "metadata": {},
    "outputs": [
     {
@@ -480,9 +458,218 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84b3558b",
+   "metadata": {},
+   "source": [
+    "#### Caesar Cipher Part 2 - Decryption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0bf95785",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type 'encode' to encrypt, type 'decode' to decrypt:\n",
+      "decode\n",
+      "Type your message:\n",
+      "c\n",
+      "Type the shift number:\n",
+      "2\n",
+      "Here is the decoded result: a\n"
+     ]
+    }
+   ],
+   "source": [
+    "alphabet = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+    "\n",
+    "direction = input(\"Type 'encode' to encrypt, type 'decode' to decrypt:\\n\").lower()\n",
+    "\n",
+    "text = input(\"Type your message:\\n\").lower()\n",
+    "\n",
+    "shift = int(input(\"Type the shift number:\\n\"))\n",
+    "\n",
+    "\n",
+    "def encrypt(original_text, shift_amount):\n",
+    "    # hello 2 \n",
+    "    cipher_text = \"\" \n",
+    "    for letter in original_text:\n",
+    "        shifted_position = alphabet.index(letter) + shift_amount      \n",
+    "        shifted_position %= len(alphabet) \n",
+    "        cipher_text += alphabet[shifted_position]  \n",
+    "    print(f\"Here is the encoded result: {cipher_text}\")\n",
+    "    \n",
+    "#TODO-1: Create the function called 'decrypt()' that takes the 'original_text' and shift_amount as 2 input    \n",
+    "#TODO-2: Inside the 'decrypy()' function, shift each letter of the 'original_text' forwards in the alphabet\n",
+    "         # backwards by the shift_amount and print the decrypted text.\n",
+    "\n",
+    "def decrypt(original_text, shift_amount):\n",
+    "    output_text = \"\" \n",
+    "    for letter in original_text:\n",
+    "        shifted_position = alphabet.index(letter) - shift_amount \n",
+    "        shifted_position %= len(alphabet) \n",
+    "        output_text += alphabet[shifted_position] \n",
+    "    print(f\"Here is the encoded result: {output_text}\")\n",
+    "    \n",
+    "#TODO-3: Combine the encrypt() and decrypt() functions into single function called 'caesar()'.\n",
+    "        # use the value of the user chosen 'direction' variable to determine which functionality to use.\n",
+    "        # call the caesar() function instead of encrypt/decrypt and pass in all three variables\n",
+    "         # direction/ text/ shift \n",
+    "\n",
+    "def caesar(original_text, shift_amount, encode_or_decode):\n",
+    "    output_text = \"\" \n",
+    "    for letter in original_text:\n",
+    "        # 3 + (5 * -1) >> 3 - 1 \n",
+    "        if encode_or_decode == 'decode':\n",
+    "            shift_amount *= -1\n",
+    "        \n",
+    "        shifted_position = alphabet.index(letter) + shift_amount \n",
+    "        shifted_position %= len(alphabet) \n",
+    "        output_text += alphabet[shifted_position] \n",
+    "    print(f\"Here is the {encode_or_decode}d result: {output_text}\")\n",
+    "    \n",
+    "            \n",
+    "# decrypt(original_text=text, shift_amount=shift)       \n",
+    "# encrypt(original_text=text, shift_amount=shift)\n",
+    "caesar(original_text=text, shift_amount=shift, encode_or_decode=direction)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acd5ce51",
+   "metadata": {},
+   "source": [
+    "#### Caesar Cipher Part 3 - Reorganising our Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "357a4854",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  ___ __ _  ___  ___  __ _ _ __ \n",
+      " / __/ _` |/ _ \\/ __|/ _` | '__|\n",
+      "| (_| (_| |  __/\\__ \\ (_| | |   \n",
+      " \\___\\__,_|\\___||___/\\__,_|_| \n",
+      " \n",
+      "\n",
+      "\n",
+      "      _       _               \n",
+      "     (_)     | |              \n",
+      "  ___ _ _ __ | |__   ___ _ __ \n",
+      " / __| | '_ \\| '_ \\ / _ \\ '__|\n",
+      "| (__| | |_) | | | |  __/ |   \n",
+      " \\___|_| .__/|_| |_|\\___|_|   \n",
+      "       | |                    \n",
+      "       |_|  \n",
+      "\n",
+      "Type 'encode' to encrypt, type 'decode' to decrypt:\n",
+      "encode\n",
+      "Type your message:\n",
+      "a\n",
+      "Type the shift number:\n",
+      "2\n",
+      "Here is the encoded result: c\n",
+      "Type 'yes' if you want to go again, type 'no'.\n",
+      "yes\n",
+      "Type 'encode' to encrypt, type 'decode' to decrypt:\n",
+      "decode\n",
+      "Type your message:\n",
+      "c\n",
+      "Type the shift number:\n",
+      "2\n",
+      "Here is the decoded result: a\n",
+      "Type 'yes' if you want to go again, type 'no'.\n",
+      "no\n",
+      "Goodbye\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO-1: Import and print the logo from art.py when the program starts \n",
+    "\n",
+    "print(\"\"\"\n",
+    "  ___ __ _  ___  ___  __ _ _ __ \n",
+    " / __/ _` |/ _ \\/ __|/ _` | '__|\n",
+    "| (_| (_| |  __/\\__ \\ (_| | |   \n",
+    " \\___\\__,_|\\___||___/\\__,_|_| \n",
+    " \n",
+    "\"\"\")\n",
+    "\n",
+    "print(\"\"\"\n",
+    "      _       _               \n",
+    "     (_)     | |              \n",
+    "  ___ _ _ __ | |__   ___ _ __ \n",
+    " / __| | '_ \\| '_ \\ / _ \\ '__|\n",
+    "| (__| | |_) | | | |  __/ |   \n",
+    " \\___|_| .__/|_| |_|\\___|_|   \n",
+    "       | |                    \n",
+    "       |_|  \n",
+    "\"\"\")\n",
+    "\n",
+    "alphabet = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+    "\n",
+    "# TODO-2: What happens if the user enters a number/space/symbol?\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def caesar(original_text, shift_amount, encode_or_decode):\n",
+    "    output_text = \"\" \n",
+    "    \n",
+    "    # 3 + (5 * -1) >> 3 - 1 \n",
+    "    if encode_or_decode == 'decode':\n",
+    "        shift_amount *= -1\n",
+    "        \n",
+    "    for letter in original_text:   \n",
+    "        if letter not in alphabet:\n",
+    "            output_text += letter\n",
+    "        else:                \n",
+    "            shifted_position = alphabet.index(letter) + shift_amount \n",
+    "            shifted_position %= len(alphabet) \n",
+    "            output_text += alphabet[shifted_position] \n",
+    "            \n",
+    "    print(f\"Here is the {encode_or_decode}d result: {output_text}\")\n",
+    "\n",
+    "# TODO-3: Can you figure out the way to restart the cipher program?\n",
+    "should_continue = True\n",
+    "\n",
+    "while should_continue:\n",
+    "    direction = input(\"Type 'encode' to encrypt, type 'decode' to decrypt:\\n\").lower()\n",
+    "    text = input(\"Type your message:\\n\").lower()\n",
+    "    shift = int(input(\"Type the shift number:\\n\"))\n",
+    "    \n",
+    "    caesar(original_text=text, shift_amount=shift, encode_or_decode=direction)\n",
+    "\n",
+    "    restart = input(\"Type 'yes' if you want to go again, type 'no'.\\n\").lower()\n",
+    "    if restart == \"no\":\n",
+    "        should_continue = False\n",
+    "        print(\"Goodbye\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cad4f326",
+   "metadata": {},
+   "source": [
+    "# write down why you are doing this you will keep motovation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10b8ee54",
+   "id": "ddf30671",
    "metadata": {},
    "outputs": [],
    "source": []
