--- a/100Days_of_Python_Code/Biginner/Day12 - Scope & Number Guessing Game.ipynb
+++ b/100Days_of_Python_Code/Biginner/Day12 - Scope & Number Guessing Game.ipynb
@@ -347,30 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " _______               ___.                    ________                            .__                \n",
-      " \\      \\  __ __  _____\\_ |__   ___________   /  _____/ __ __   ____   ______ _____|__| ____    ____  \n",
-      " /   |   \\|  |  \\/     \\| __ \\_/ __ \\_  __ \\ /   \\  ___|  |  \\_/ __ \\ /  ___//  ___/  |/    \\  / ___\\ \n",
-      "/    |    \\  |  /  Y Y  \\ \\_\\ \\  ___/|  | \\/ \\    \\_\\  \\  |  /\\  ___/ \\___ \\ \\___ \\|  |   |  \\/ /_/  >\n",
-      "\\____|__  /____/|__|_|  /___  /\\___  >__|     \\______  /____/  \\___  >____  >____  >__|___|  /\\___  / \n",
-      "        \\/            \\/    \\/     \\/                \\/            \\/     \\/     \\/        \\//_____/\n",
-      "\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
-      "C:\\Users\\Digvijay Mohite\\AppData\\Local\\Temp\\ipykernel_6608\\642252150.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "C:\\Users\\Digvijay Mohite\\AppData\\Local\\Temp\\ipykernel_19756\\117046544.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
       "  logo = \"\"\"\n"
      ]
     }
@@ -383,9 +369,119 @@
     "/    |    \\  |  /  Y Y  \\ \\_\\ \\  ___/|  | \\/ \\    \\_\\  \\  |  /\\  ___/ \\___ \\ \\___ \\|  |   |  \\/ /_/  >\n",
     "\\____|__  /____/|__|_|  /___  /\\___  >__|     \\______  /____/  \\___  >____  >____  >__|___|  /\\___  / \n",
     "        \\/            \\/    \\/     \\/                \\/            \\/     \\/     \\/        \\//_____/\n",
-    "\"\"\"\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wel come to the number guessing game..!\n",
+      "I am thinking of the number between 1 and 100\n",
+      "You have 10 attempts remaining to guess the number.\n",
+      "To high..!\n",
+      "Guess again!\n",
+      "You have 9 attempts remaining to guess the number.\n",
+      "To high..!\n",
+      "Guess again!\n",
+      "You have 8 attempts remaining to guess the number.\n",
+      "To high..!\n",
+      "Guess again!\n",
+      "You have 7 attempts remaining to guess the number.\n",
+      "To high..!\n",
+      "Guess again!\n",
+      "You have 6 attempts remaining to guess the number.\n",
+      "To high..!\n",
+      "Guess again!\n",
+      "You have 5 attempts remaining to guess the number.\n",
+      "To low..!\n",
+      "Guess again!\n",
+      "You have 4 attempts remaining to guess the number.\n",
+      "To high..!\n",
+      "Guess again!\n",
+      "You have 3 attempts remaining to guess the number.\n",
+      "To high..!\n",
+      "Guess again!\n",
+      "You have 2 attempts remaining to guess the number.\n",
+      "To low..!\n",
+      "Guess again!\n",
+      "You have 1 attempts remaining to guess the number.\n",
+      "To low..!\n",
+      "You have run out of guesses, you lose..!\n",
+      "You got it , the answer was 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
     "\n",
-    "print(logo)"
+    "# Global variabe \n",
+    "\n",
+    "EASY_LEVEL_TURN  = 10\n",
+    "HARD_LEVEL_TURN = 5\n",
+    "\n",
+    "# Function to check user's guess against actual answer\n",
+    "\n",
+    "def check_answer(user_guess, actual_answer, turns):\n",
+    "    \"\"\"Checks answers against guess, return the number of turns remaining.\"\"\"\n",
+    "    if user_guess > actual_answer:\n",
+    "        print(\"To high..!\")\n",
+    "        return turns - 1\n",
+    "    elif user_guess < actual_answer:\n",
+    "        print(\"To low..!\")\n",
+    "        return turns - 1\n",
+    "    else:\n",
+    "        print(f\"You got it , the answer was {actual_answer}\")\n",
+    "\n",
+    "# Function to set difficulty \n",
+    "\n",
+    "def set_difficulty():\n",
+    "    level = input(\"Choose a difficulty, Type 'easy' or 'hard': \").lower()\n",
+    "    # global turns\n",
+    "    # if level == \"easy\":\n",
+    "    #     turns = EASY_LEVEL_TURN\n",
+    "    # else:\n",
+    "    #     turns = HARD_LEVEL_TURN\n",
+    "    if level == \"easy\": \n",
+    "        return EASY_LEVEL_TURN\n",
+    "    else:\n",
+    "        return HARD_LEVEL_TURN\n",
+    "\n",
+    "\n",
+    "def game():\n",
+    "    \n",
+    "    # print(logo)\n",
+    "    # choosing rwandom number between 1 to 100\n",
+    "    print(\"Wel come to the number guessing game..!\")\n",
+    "    print(\"I am thinking of the number between 1 and 100\")\n",
+    "    answer = randint(1, 100)\n",
+    "    # print(f\"Pssst, the correct answer is {answer}\")\n",
+    "\n",
+    "    turns = set_difficulty()\n",
+    "   \n",
+    "    # Repeate the guessing functionality if they get it wrong\n",
+    "\n",
+    "    guess = 0\n",
+    "    while guess != answer:\n",
+    "\n",
+    "        print(f\"You have {turns} attempts remaining to guess the number.\")\n",
+    "        # Let the user guess a number\n",
+    "        guess = int(input(\"Make a guess: \"))\n",
+    "        # Treck the number of turns and reduce by 1 if they git it wrong\n",
+    "        turns = check_answer(guess, answer, turns)\n",
+    "        if turns == 0:\n",
+    "            print(\"You have run out of guesses, you lose..!\")\n",
+    "            print(f\"You lose it , the answer was {answer}\")\n",
+    "            return\n",
+    "        elif turns != 0:\n",
+    "            print(\"Guess again!\")\n",
+    "\n",
+    "game()"
    ]
   },
   {
