--- a/Daily_Programming/DailyPractice.ipynb
+++ b/Daily_Programming/DailyPractice.ipynb
@@ -641,18 +641,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered list : [20, 30, 40, 0]\n",
+      "sum of the list : 90\n"
+     ]
+    }
+   ],
    "source": [
     "sum = 0\n",
+    "num_list = []\n",
     "while True:\n",
     "    num = int(input(\"Enter the number : \"))\n",
-    "    if num == 0:\n",
+    "    num_list.append(num)\n",
+    "    if num ==0:\n",
     "        break\n",
     "    else:\n",
     "        sum+=num\n",
-    "print(f\"The sum of entered numbers is : {sum}\")"
+    "\n",
+    "print(\"Entered list :\",num_list)\n",
+    "print(\"sum of the list :\",sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "29. Write a program that prints all the numbers from 1 to 10 except 5 using a for loop and continue statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11):\n",
+    "    if i ==5 :\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "30. Write a program that defines an empty function using the pass statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfun():\n",
+    "    pass\n",
+    "\n",
+    "# calling the function\n",
+    "myfun()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "31. Combining Loops and Conditionals\n",
+    "\n",
+    "Write a program that asks the user to input a number and prints all the even numbers from 1 to that number using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Now we are printing even numbers from 1 to 10(Entered Number)\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter the number : \"))\n",
+    "print(f\" Now we are printing even numbers from 1 to {num}(Entered Number)\")\n",
+    "\n",
+    "for i in range(1, num+1):\n",
+    "    if i%2 == 0:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "32. Factorial Calculation\n",
+    "\n",
+    "Write a program that calculates the factorial of a number input by the user using a while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fcatorial of 5 is = 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(num):\n",
+    "    if num == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return num * factorial(num-1)\n",
+    "    \n",
+    "\n",
+    "num = int(input(\"Enter the number to calculate factorial : \"))\n",
+    "print(f\"Fcatorial of {num} is = {factorial(num)}\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "factorial of -1 = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fact(num):\n",
+    "    res = 1\n",
+    "    for i in range(1, num+1):\n",
+    "        res *= i\n",
+    "    return res\n",
+    "\n",
+    "user_input = int(input(\"Enter the number :  \"))\n",
+    "print(f\"factorial of {user_input} = {fact(user_input)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "33. Sum of Digits\n",
+    "\n",
+    "Write a program that calculates the sum of the digits of a number input by the user using a while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered Number =  5678\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter the number :  \"))\n",
+    "print(\"Entered Number = \", num)\n",
+    "\n",
+    "sum = 0\n",
+    "while num>0:\n",
+    "    digit = num % 10 # last digit \n",
+    "    sum = sum + digit\n",
+    "    num = num // 10 # second last digit\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "34. Prime Number Check\n",
+    "\n",
+    "Write a program that checks if a number input by the user is a prime number using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered Number =  3\n",
+      "The 3 is not prime number...! \n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Enter the number :  \"))\n",
+    "print(\"Entered Number = \", num)\n",
+    "\n",
+    "is_prime = True\n",
+    "if num<=1 :\n",
+    "    is_prime = False\n",
+    "else:\n",
+    "    for i in range(2, (number**0.5) + 1):\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1622776601683795"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10**0.5"
    ]
   },
   {
@@ -660,14 +919,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "number = int(input(\"Enter a number: \"))\n",
+    "is_prime = True\n",
+    "if number <= 1:\n",
+    "    is_prime = False\n",
+    "else:\n",
+    "    for i in range(2, int(number ** 0.5) + 1):\n",
+    "        if number % i == 0:\n",
+    "            is_prime = False\n",
+    "            break\n",
+    "if is_prime:\n",
+    "    print(f\"{number} is a prime number.\")\n",
+    "else:\n",
+    "    print(f\"{number} is not a prime number.\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "35. Fibonacci Sequence\n",
+    "\n",
+    "Write a program that prints the first n Fibonacci numbers, where n is input by the user."
+   ]
   },
   {
    "cell_type": "code",
